Iniciando utilização do firebase para trabalhar com dados no aplicativo

--- a/app/pegasus/app.json
+++ b/app/pegasus/app.json
@@ -1,30 +1,25 @@
 {
-  "expo": {
-    "name": "Pegaso",
-    "slug": "pegaso",
-    "privacy": "public",
-    "sdkVersion": "32.0.0",
-    "platforms": [
-      "ios",
-      "android"
-    ],
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/image/logo.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#D2691E"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "description": ""
-  }
+    "expo": {
+        "name": "Pegasus",
+        "slug": "pegasus",
+        "privacy": "public",
+        "sdkVersion": "32.0.0",
+        "platforms": ["ios", "android"],
+        "version": "1.0.0",
+        "orientation": "portrait",
+        "icon": "./assets/icon.png",
+        "splash": {
+            "image": "./assets/image/logo.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#D2691E"
+        },
+        "updates": {
+            "fallbackToCacheTimeout": 0
+        },
+        "assetBundlePatterns": ["**/*"],
+        "ios": {
+            "supportsTablet": true
+        },
+        "description": ""
+    }
 }
