--- a/app/pegasus/package.json
+++ b/app/pegasus/package.json
@@ -1,21 +1,22 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "expo": "^32.0.0",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-elements": "^1.1.0",
-    "react-native-firebase": "^5.3.1",
-    "react-navigation": "^3.6.1"
-  },
-  "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
-  },
-  "private": true
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "eject": "expo eject"
+    },
+    "dependencies": {
+        "expo": "^32.0.0",
+        "expo-cli": "^2.18.0",
+        "firebase": "^6.0.2",
+        "react": "16.5.0",
+        "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+        "react-native-elements": "^1.1.0",
+        "react-navigation": "^3.6.1"
+    },
+    "devDependencies": {
+        "babel-preset-expo": "^5.0.0"
+    },
+    "private": true
 }
