--- a/app/pegasus/package.json
+++ b/app/pegasus/package.json
@@ -8,8 +8,9 @@
     },
     "dependencies": {
         "expo": "^32.0.0",
-        "expo-cli": "^2.18.0",
+        "expo-cli": "^2.18.7",
         "firebase": "^6.0.2",
+        "native-base": "^2.12.1",
         "react": "16.5.0",
         "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
         "react-native-elements": "^1.1.0",
